# GPTMiddleman

./: Cargo.toml  README.md
src/: main.rs
src/handlers/: chat.rs  chat_json.rs  create_user.rs  decrement_user.rs  delete_users.rs  embeddings.rs  mod.rs  read_user.rs  read_users.rs  update_user.rs
src/middleware/: chat_json_request_handler.rs  chat_request_handler.rs  create_user_handler.rs  decrement_user_handler.rs  delete_users_handler.rs  embedding_request_handler.rs  mod.rs  read_user_handler.rs  read_users_handler.rs  update_user_handler.rs
src/middleware/utils/: env.rs  mod.rs  process_messages.rs
src/models/: mod.rs
src/models/openai/: chat_function_model.rs  chat_model.rs  embeddings_model.rs  mod.rs
src/models/openai/data_types/: chat_request.rs  chat_response.rs  embeddings_data.rs  embeddings_request.rs  embeddings_response.rs  mod.rs  similarity_result.rs
src/models/storage/: memory.rs  mod.rs
src/models/storage/db_sqlite/: create_user.rs  decrement_user.rs  delete_users.rs  mod.rs  read_user.rs  read_users.rs  schema.rs  update_user.rs
src/models/vector_search/: cosine_similarity.rs  mod.rs
src/server/: mod.rs  router.rs
wiki_5/: 12345051-96b6-4d46-8d64-b8dad232c572.json  1234b15a-2b58-4be1-bab5-a810d06f4edc.json  1234b265-ed19-4bdf-af4b-c93159e1a8f1.json  1234e4dc-ec5a-47c1-a39b-d46e985b9055.json  1a00a7b1-aa40-488e-90f4-b5f1da21bd70.json
