[package]
name = "gpt_middleman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
lazy_static = "1.4.0"
glob = "0.3.0"
rusqlite = "0.29.0"
rand = "0.8.4"
futures = "0.3.15"
dotenv = "0.15.0"